--- a/tests/ant.properties
+++ b/tests/ant.properties
@@ -14,5 +14,6 @@
 #  'key.store' for the location of your keystore and
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
-
+key.store=/Users/phammond/.android/debug.keystore
+key.alias=android
 tested.project.dir=..
